2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.1.
	* configure.ac: set version 6.2.1.
	* doc/version.texi: set version 6.2.1.
	* doc/Makefile.am: clean files.
	* man/Makefile.am: clean files.

2015-01-04  Antonio Ceballos  <aceballos@gmail.com>

	* NEWS: changes in version 6.2.0.
	* configure.ac: set version 6.2.0.
	* doc/version.texi: set version 6.2.0.
	* doc/gnuchess.texi: copyright year 2015.
	* src/main.cc: copyright year 2015.

2015-01-03  H.G. Muller  <h.g.muller@hccnet.nl>  (tiny change)

	* misc: new directory
	* misc/gnuchess.eng: engine file for XBoard.
	* misc/gnuchess.png: logo file for XBoard.
	* configure.ac: path for installation of game data files.
	* Makefile.am: distribution of engine and logo file.

2015-01-02  Michael Vetter  <g.bluehut@googlemail.com>  (tiny change)

	* doc/gnuchess.texi: correct punctuation and wording.
	* src/* (several files): remove trailing spaces.

2014-08-01  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/move.cc: lowercase not allowed for piece names.

2014-08-01  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: simple man page based on help2man.
	* Makefile.am: simple man page based on help2man.
	* man/: simple man page based on help2man.
	* man/Makefile.am: simple man page based on help2man.
	* doc/Makefile.am: small error in header description,

2014-07-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/debug.cc: compile with no warnings when DEBUG
	directive defined.
	* src/adapter/book.cpp: replace weird characters.
	* src/main.cc: copyright year 2014.
	* configure.ac: set version 6.1.2.
	* doc/gnuchess.texi: replace CFLAGS by CPPFLAGS.
	* doc/version.texi: set version 6.1.2.
	* TODO: added new task.
	* NEWS: changes in version 6.1.2.
	* po/LINGUAS: added gl, vi, nb.
	* po/gl.po: added.
	* po/vi.po: added.
	* po/nb.po: added.
	* po/*.po: updated.

2014-07-29  Pawel Koziol <pp.koziol@gmail.com>  (tiny change)
